update website logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,17 +82,14 @@ ul li, ol li {
   display: inline;
   font-size: 115px;
   font-weight: 700;
-  height: 100%;
   left: -173px;
   opacity: 0.1;
   position: absolute;
   top: -14px;
-  width: 100%;
   text-align: center;
 }
 
 .section-title-header p {
-  text: center;
   font-weight: 400;
   line-height: 26px;
   padding-bottom: 36px;
@@ -226,6 +223,10 @@ button:focus {
 
 .social-icon li .linkedin:hover {
   background: #1260A2;
+}
+
+.social-icon li .github:hover {
+  background: #000000;
 }
 
 .social-icon li .google:hover {
@@ -609,7 +610,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   border-bottom: 1px solid #f1f1f1;
   text-decoration: none;
   display: inline-block;
-  float: left;
   clear: both;
   position: relative;
   outline: 0;
